# C-feed-forward-neural-network

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
C-Data-Structures-Lib/include/: Queue.h  Stack.h  String.h  bit_vector.h  common.h  fast_math.h  gen_vector.h  hashmap.h  hashset.h  map_setup.h  matrix.h  random.h  tensor.h
C-Data-Structures-Lib/src/: Queue.c  Stack.c  String.c  arena.c  fast_math.c  gen_vector.c  hashmap.c  hashset.c  main.c  matrix.c  random.c  tensor.c
include/: ffnn.h  idx_file_reader.h  layer.h  mnist_data_processor.h  op_utils.h
src/: ffnn.c  idx_file_reader.c  layer.c  main.c  mnist_data_processor.c
tests/: mnist_tests.h  xor_test.h
